objects/OpportunityLineItem.object
<CustomObject><fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>DirectorNotificationSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DirectorNotificationSent</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Event_Name__c</fullName>
        <formula>Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Gratis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gratis</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Ticket_Total__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Ticket Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds></CustomObject>